--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Hello, world!</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
