--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-dark">
     <div class="container">
@@ -63,11 +64,9 @@
               </div>
             </form>
             <!-- LOADER -->
-            <!--
             <div id="loading">
-              <img src="img/loading.gif" alt="">
+              <img src="img/loading.gif" alt="" />
             </div>
-            -->
             <!-- RESULTS -->
             <div id="results" class="pt-4">
               <h5>Results</h5>
